[package]
name = "ttyspy"
version = "0.1.0"
edition = "2021"
authors = ["Luke Berg"]
description = "A tool for spying on TTYs and reporting on their activity."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
